Fixed overflow error

--- a/frontend/src/modules/skill-processes/bpmn-diagram/properties-panel/properties-panel.component.scss
+++ b/frontend/src/modules/skill-processes/bpmn-diagram/properties-panel/properties-panel.component.scss
@@ -13,7 +13,8 @@ dynamic-property {
 
 .properties-card {
     width: 100%;
-    height:100%
+    height:100%;
+    overflow: auto;
 }
 
 .pointer {
